# change_currencies

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  UML_diagram.drawio
cmake/: cpr.cmake  date.cmake  rapidjson.cmake
include/apiHandler/: API.hpp
include/exchangeRate/: ExchangeRate.hpp  Rate.hpp
include/exchangeRate/amount/: Amount.hpp
include/exchangeRate/currency/: Currency.hpp
include/parser/: Parser.hpp
include/parser/exception/: InvalidResponseSyntaxException.hpp
include/parser/nbp/: ParserNBP.hpp
src/currency/: CMakeLists.txt  Currency.cc
src/exchangeRate/: CMakeLists.txt  ExchangeRate.cc  Rate.cc
src/exchangeRate/amount/: Amount.cc  CMakeLists.txt
src/exchangeRate/currency/: CMakeLists.txt  Currency.cc
src/parser/exception/: CMakeLists.txt  InvalidResponseSyntaxException.cc
src/parser/nbp/: CMakeLists.txt  ParserNBP.cc
test/: CMakeLists.txt
test/cmake/: googletest.cmake
test/parserTests/: parserTests.cmake
test/parserTests/nbpTests/: ParserNBP_test.cc
